--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@
 TELEGRAM_BOT_TOKEN=your-telegram-bot-token
 OPENAI_API_KEY=your-openai-api-key
 RENDER_URL=https://your-render-app.onrender.com
-DATABASE_URL=sqlite:///chat_history.db
+DATABASE_URL=postgres://user:password@host:port/dbname
