--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 python-telegram-bot==20.0
 openai==1.2.3
 flask==2.2.3
+werkzeug==2.2.3
 requests==2.28.2
 sqlalchemy==2.0.10
 psycopg2-binary==2.9.6
