--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-fastapi
-uvicorn
-python-telegram-bot==20.3
-openai
-sqlalchemy
-aiofiles
-psycopg2-binary
+python-telegram-bot>=20.0
+fastapi>=0.68.0
+uvicorn>=0.15.0
+openai>=1.0.0
+pymongo>=4.0.0
+python-dotenv>=0.19.0
+requests>=2.26.0
+aiohttp>=3.8.0
