--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Thay thế bằng token thật trước khi chạy bot
 TELEGRAM_BOT_TOKEN=your-telegram-bot-token
 OPENAI_API_KEY=your-openai-api-key
-RENDER_URL=https://your-render-app.onrender.com
+WEBHOOK_URL=https://your-render-app.onrender.com/webhook
 MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<dbname>
